# ChangeLog for app-editors/tea
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.32 2008/03/01 19:03:07 armin76 Exp $

  01 Mar 2008; Raúl Porcel <armin76@gentoo.org> tea-17.5.4.ebuild:
  x86 stable

  02 Feb 2008; Raúl Porcel <armin76@gentoo.org> tea-17.5.0.ebuild:
  x86 stable

*tea-17.5.4 (25 Jan 2008)

  25 Jan 2008; Samuli Suominen <drac@gentoo.org>
  +files/tea-17.5.4-forced-cflags-and-compiler-warnings.patch,
  +tea-17.5.4.ebuild:
  Version bump. Stop installing stripped binary. Include string.h where strlen
  is used, was hidden by forced -w in CFLAGS.

*tea-17.5.1 (07 Jan 2008)

  07 Jan 2008; <welp@gentoo.org> +tea-17.5.1.ebuild:
  Bump

*tea-17.5.0 (02 Jan 2008)

  02 Jan 2008; Peter Weller <welp@gentoo.org> +tea-17.5.0.ebuild:
  Bump

  30 Dec 2007; Samuli Suominen <drac@gentoo.org> -files/tea_icon_v2.png,
  -tea-16.1.1.ebuild, -tea-16.1.1-r1.ebuild, -tea-17.0.0.ebuild,
  -tea-17.0.2.ebuild, -tea-17.3.5.ebuild, tea-17.4.1.ebuild:
  amd64 stable, closing also #200306, leaving QA bugs 200229 and 200304 open -
  not a regression.

  16 Dec 2007; Raúl Porcel <armin76@gentoo.org> tea-17.4.1.ebuild:
  x86 stable

  29 Nov 2007; Raúl Porcel <armin76@gentoo.org> tea-17.3.5.ebuild:
  x86 stable

*tea-17.4.1 (17 Nov 2007)

  17 Nov 2007; Peter Weller <welp@gentoo.org> +tea-17.4.1.ebuild:
  Bump

  22 Oct 2007; <welp@gentoo.org> ChangeLog:
  Bump to 17.3.5, remove sounds USE in previous versions. Fixes bugs 196402
  and 188371, respectively.

  11 Oct 2007; Rémi Cardona <remi@gentoo.org> tea-16.1.1.ebuild,
  tea-16.1.1-r1.ebuild, tea-17.0.0.ebuild, tea-17.0.2.ebuild:
  update gtksourceview deps (see bug #195366)

  05 Sep 2007; Raúl Porcel <armin76@gentoo.org> tea-17.0.2.ebuild:
  x86 stable

  08 Jul 2007; Raúl Porcel <armin76@gentoo.org> tea-17.0.0.ebuild:
  Re-add ~ia64/~x86 because welp fails

*tea-17.0.0 (07 Jul 2007)
*tea-16.1.1-r1 (07 Jul 2007)
