@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/tea
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.32 2008/03/01 19:03:07 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.33 2008/03/17 07:30:05 welp Exp $
+
+*tea-17.6.0 (17 Mar 2008)
+
+  17 Mar 2008; Peter Weller <welp@gentoo.org> +tea-17.6.0.ebuild:
+  Bump
 
   01 Mar 2008; Raúl Porcel <armin76@gentoo.org> tea-17.5.4.ebuild:
   x86 stable
